--- a/F_BDPeatge.ui
+++ b/F_BDPeatge.ui
@@ -6,12 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1100</width>
+    <width>1130</width>
     <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../../../../2C8F-037C/Mis Projectos/Almacen Peaje/BDPeatge Python/Imagenes/Logo.bmp</normaloff>../../../../2C8F-037C/Mis Projectos/Almacen Peaje/BDPeatge Python/Imagenes/Logo.bmp</iconset>
   </property>
   <widget class="QFrame" name="frame">
    <property name="geometry">
@@ -349,7 +353,7 @@
     <rect>
      <x>350</x>
      <y>720</y>
-     <width>741</width>
+     <width>761</width>
      <height>71</height>
     </rect>
    </property>
@@ -391,8 +395,8 @@
     <rect>
      <x>350</x>
      <y>10</y>
-     <width>741</width>
-     <height>701</height>
+     <width>761</width>
+     <height>691</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -432,7 +436,7 @@
      <rect>
       <x>240</x>
       <y>650</y>
-      <width>471</width>
+      <width>501</width>
       <height>30</height>
      </rect>
     </property>
@@ -482,7 +486,7 @@
    <widget class="QPushButton" name="B_Siguiente">
     <property name="geometry">
      <rect>
-      <x>680</x>
+      <x>710</x>
       <y>20</y>
       <width>31</width>
       <height>551</height>
@@ -502,10 +506,10 @@
    <widget class="QLabel" name="L_Foto">
     <property name="geometry">
      <rect>
-      <x>57</x>
-      <y>25</y>
-      <width>611</width>
-      <height>541</height>
+      <x>55</x>
+      <y>20</y>
+      <width>650</width>
+      <height>550</height>
      </rect>
     </property>
     <property name="autoFillBackground">
@@ -521,7 +525,7 @@
    <widget class="QPushButton" name="B_Imagen1">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>50</x>
       <y>580</y>
       <width>90</width>
       <height>28</height>
@@ -534,7 +538,7 @@
    <widget class="QPushButton" name="B_Imagen2">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>330</x>
       <y>580</y>
       <width>90</width>
       <height>28</height>
@@ -547,7 +551,7 @@
    <widget class="QPushButton" name="B_Imagen3">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>620</x>
       <y>580</y>
       <width>90</width>
       <height>28</height>
